--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -25,3 +25,11 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
+
+.pageContainer {
+  position: relative;
+}
+
+.hidden {
+  display: none;
+}
