--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -2,520 +2,126 @@
  *                          CHAPTER TEMPLATE 
  *========================================================================**/
 
-h1 {
-  font-size: 5rem;
-  @include respond(break-1000) {
-    font-size: 3rem;
-  }
-}
-
-h2 {
-  font-size: 7rem;
-  font-weight: 300;
-  text-transform: uppercase;
-  color: $color-white;
-  @include respond(break-greater-1600) {
-    font-size: 10rem;
-  }
-  @include respond(break-1000) {
-    font-size: 3.5rem;
-  }
-}
-
-.pageContainer {
+.chapter-landing {
   position: relative;
+  z-index: 1;
+  height: 100vh;
+  width: 100%;
 }
-.chapter {
-  &-landing {
-    position: relative;
-    z-index: 1;
-    height: 100vh;
+
+.chapter-content {
+  margin: 0rem auto;
+  padding-bottom: 4rem;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  @include respond(break-1000) {
+    width: 90%;
+  }
+
+  &::after {
+    z-index: -1;
+    background-image: url(../img/staticNoise.jpg);
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.03;
     width: 100%;
-    &--prologue {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 1) 25%,
-          rgba(0, 0, 0, 0) 30% 80%,
-          rgba(0, 0, 0, 1) 85%
-        ),
-        url('../img/prologue.jpg');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      @include respond(break-1000) {
-        background-size: contain;
-        background-position: 60% 45%;
-        background-image: linear-gradient(
-            to top,
-            rgba(0, 0, 0, 1) 30%,
-            rgba(0, 0, 0, 0) 40% 65%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/prologue.jpg');
-      }
-    }
-    &--c1 {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 1) 0 35%,
-          rgba(0, 0, 0, 0) 40% 55%,
-          rgba(0, 0, 0, 1) 85%
-        ),
-        url('../img/chapter1.jpg');
-      background-repeat: no-repeat;
-      background-position: 50% 45%;
-      @include respond(break-greater-1600) {
-        background-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 1) 25%,
-            rgba(0, 0, 0, 0) 25% 75%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/chapter1.jpg');
-      }
-      @include respond(break-1000) {
-        background-size: contain;
-        background-image: linear-gradient(
-            to top,
-            rgba(0, 0, 0, 1) 30%,
-            rgba(0, 0, 0, 0) 40% 65%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/chapter1.jpg');
-      }
-    }
-    &--c2 {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 1) 0 25%,
-          rgba(0, 0, 0, 0) 30% 90%,
-          rgba(0, 0, 0, 1) 95%
-        ),
-        url('../img/chapter2.jpg');
-      background-repeat: no-repeat;
-      background-position: 50% 45%;
-      @include respond(break-greater-1600) {
-        background-position: 0% 45%;
-        background-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 1) 20%,
-            rgba(0, 0, 0, 0) 25% 55%,
-            rgba(0, 0, 0, 1) 78%
-          ),
-          url('../img/chapter2.jpg');
-      }
-      @include respond(break-1000) {
-        background-position: 80% 45%;
-        background-size: contain;
-        background-image: linear-gradient(
-            to top,
-            rgba(0, 0, 0, 1) 30%,
-            rgba(0, 0, 0, 0) 40% 65%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/chapter2.jpg');
-      }
-    }
-    &--c3 {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 1) 0 25%,
-          rgba(0, 0, 0, 0) 30% 90%,
-          rgba(0, 0, 0, 1) 95%
-        ),
-        url('../img/chapter3.jpg');
-      background-repeat: no-repeat;
-      background-position: 50% 45%;
-      @include respond(break-greater-1600) {
-        background-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 1) 25%,
-            rgba(0, 0, 0, 0) 30% 80%,
-            rgba(0, 0, 0, 1) 85%
-          ),
-          url('../img/chapter3.jpg');
-      }
-      @include respond(break-1000) {
-        background-size: contain;
-        background-image: linear-gradient(
-            to top,
-            rgba(0, 0, 0, 1) 30%,
-            rgba(0, 0, 0, 0) 40% 65%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/chapter3.jpg');
-      }
-    }
-    &--c4 {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 1) 0 20%,
-          rgba(0, 0, 0, 0) 25% 55%,
-          rgba(0, 0, 0, 1) 85%
-        ),
-        url('../img/chapter4.jpg');
-      background-repeat: no-repeat;
-      background-position: 50% 45%;
-      @include respond(break-greater-1600) {
-        background-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 1) 35%,
-            rgba(0, 0, 0, 0) 45% 65%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/chapter4.jpg');
-      }
-      @include respond(break-1000) {
-        background-size: contain;
-        background-image: linear-gradient(
-            to top,
-            rgba(0, 0, 0, 1) 30%,
-            rgba(0, 0, 0, 0) 40% 65%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/chapter4.jpg');
-      }
-    }
-    &--c5 {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 1) 0 20%,
-          rgba(0, 0, 0, 0) 25% 55%,
-          rgba(0, 0, 0, 1) 85%
-        ),
-        url('../img/chapter5.jpg');
-      background-repeat: no-repeat;
-      background-position: 50% 45%;
-      @include respond(break-greater-1600) {
-        background-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 1) 25%,
-            rgba(0, 0, 0, 0) 30% 70%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/chapter5.jpg');
-      }
-      @include respond(break-1000) {
-        background-size: contain;
-        background-image: linear-gradient(
-            to top,
-            rgba(0, 0, 0, 1) 30%,
-            rgba(0, 0, 0, 0) 40% 65%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/chapter5.jpg');
-      }
-    }
-    &--c6 {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 1) 0 25%,
-          rgba(0, 0, 0, 0) 30% 90%,
-          rgba(0, 0, 0, 1) 95%
-        ),
-        url('../img/chapter3-2.jpg');
-      background-repeat: no-repeat;
-      background-position: 50% 45%;
-      @include respond(break-greater-1600) {
-        background-position: 0% 45%;
-        background-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 1) 20%,
-            rgba(0, 0, 0, 0) 25% 65%,
-            rgba(0, 0, 0, 1) 78%
-          ),
-          url('../img/chapter3-2.jpg');
-      }
-      @include respond(break-1000) {
-        background-size: contain;
-        background-position: 75% 45%;
-        background-image: linear-gradient(
-            to top,
-            rgba(0, 0, 0, 1) 35%,
-            rgba(0, 0, 0, 0) 40% 70%,
-            rgba(0, 0, 0, 1) 75%
-          ),
-          url('../img/chapter3-2.jpg');
-      }
-    }
-  }
-
-  &-content {
-    margin: 0rem auto;
-    padding-bottom: 4rem;
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    @include respond(break-1000) {
-      width: 90%;
-    }
-
-    &::after {
-      z-index: -1;
-      background-image: url(../img/staticNoise.jpg);
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0.03;
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  &-text {
-    & > * {
-      margin-top: 3rem;
-    }
+    height: 100%;
   }
 }
 
+.chapter-text {
+  & > * {
+    margin-top: 3rem;
+  }
+}
 .title {
   display: flex;
   flex-direction: column;
+}
 
-  &-landing {
-    position: absolute;
-    color: $color-white;
+.title-landing {
+  position: absolute;
+  width: 90%;
+  @include respond(break-1000) {
+    position: relative;
+    margin: 0 auto;
+    top: 1rem;
+    left: 50%;
+    align-items: center;
     width: 90%;
-    @include respond(break-1000) {
-      position: relative;
-      margin: 0 auto;
-      top: 1rem;
-      left: 50%;
-      // transform: translateX(-50%);
-      align-items: center;
-      width: 90%;
-      overflow: hidden;
-      left: 0;
-    }
-    &--prologue {
-      bottom: 40%;
-      left: 6rem;
-      @include respond(break-1000) {
-        bottom: 0rem;
-        left: 0rem;
-      }
-    }
-    &--c1 {
-      bottom: 40%;
-      left: 3rem;
-      @include respond(break-1000) {
-        bottom: 0rem;
-        left: 0rem;
-      }
-    }
-    &--c2 {
-      bottom: 40%;
-      left: 3rem;
-      @include respond(break-1000) {
-        bottom: 0rem;
-        left: 0rem;
-      }
-    }
-    &--c3 {
-      bottom: 40%;
-      left: 3rem;
-      @include respond(break-1000) {
-        bottom: 0rem;
-        left: 0rem;
-      }
-    }
-    &--c4 {
-      bottom: 40%;
-      left: 3rem;
-      @include respond(break-1000) {
-        bottom: 0rem;
-        left: 0rem;
-      }
-    }
-    &--c5 {
-      bottom: 40%;
-      left: 3rem;
-      @include respond(break-1000) {
-        bottom: 0rem;
-        left: 0rem;
-      }
-    }
-    &--c6 {
-      bottom: 40%;
-      left: 3rem;
-      @include respond(break-1000) {
-        bottom: 0rem;
-        left: 0rem;
-      }
-    }
-    & > *:not(:first-child) {
-      margin-top: 1rem;
-      @include respond(break-1000) {
-        margin-top: 3px;
-        margin-left: 0rem;
-      }
-    }
+    overflow: hidden;
+    left: 0;
   }
-  &-content {
-    color: $color-black;
 
+  & > *:not(:first-child) {
+    margin-top: 1rem;
     @include respond(break-1000) {
-      > h2 {
-        margin-bottom: 2rem;
-      }
+      margin-top: 3px;
+      margin-left: 0rem;
     }
   }
-  &-chapterNumber {
-  }
-  &-chapterTitle {
-    text-align: left;
 
-    &--prologue {
-    }
-    &--c1 {
-      @include respond(break-1000) {
-        width: 100%;
-        text-align: center;
-      }
-    }
-    &--c2 {
-      text-align: left;
-      width: 60%;
-      @include respond(break-1000) {
-        width: 80%;
-        text-align: center;
-      }
-    }
-    &--c3 {
-      text-align: left;
-      @include respond(break-1000) {
-        width: 80%;
-        text-align: center;
-      }
-    }
-    &--c4 {
-      text-align: left;
-      width: 60%;
-      @include respond(break-1000) {
-        width: 80%;
-        text-align: center;
-      }
-    }
-    &--c5 {
-      text-align: left;
-      width: 60%;
-      @include respond(break-greater-1600) {
-        width: 80%;
-      }
-      @include respond(break-1000) {
-        width: 80%;
-        text-align: center;
-      }
-    }
-    &--c6 {
-      width: 40%;
-      text-align: left;
-      @include respond(break-greater-1600) {
-        width: 50%;
-      }
-      @include respond(break-1000) {
-        width: 80%;
-        text-align: center;
-        font-size: 1.7rem;
-      }
-    }
-  }
-  &-authorName {
-    font-size: 1.8rem;
-    margin-top: 3rem;
-    @include respond(break-1000) {
-      margin-top: 0rem;
-      font-size: 1.7rem;
-    }
-  }
-  &-btn {
-    font-size: 1.5rem;
-    padding: 1rem 0.5rem;
-    width: 10rem;
-    border-radius: 15px;
-    z-index: 100;
-    background-color: transparent;
-    border-color: $color-white;
+  & > h1 {
     color: $color-white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-
-    &:hover {
-      background-color: $color-dark-gray;
+    width: 30%;
+    font-size: 5rem;
+    @include respond(break-1000) {
+      font-size: 3rem;
+      width: max-content;
     }
+  }
+  & > span {
+    color: $color-white;
+  }
+}
+
+.title-content {
+  & > h2 {
+    font-size: 7rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: $color-black;
+    text-align: center;
+    @include respond(break-greater-1600) {
+      font-size: 10rem;
+    }
+    @include respond(break-1000) {
+      font-size: 3.5rem;
+      margin-bottom: 2rem;
+    }
+  }
+}
+
+.title-authorName {
+  font-size: 1.8rem;
+  margin-top: 3rem;
+  @include respond(break-1000) {
+    margin-top: 0rem;
+    font-size: 1.7rem;
+  }
+}
+
+.title-btn {
+  font-size: 1.5rem;
+  padding: 1rem 0.5rem;
+  width: 10rem;
+  border-radius: 15px;
+  z-index: 100;
+  background-color: transparent;
+  border-color: $color-white;
+  color: $color-white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: $color-dark-gray;
   }
 }
 
 .text {
   line-height: 2.9rem;
   font-size: 2rem;
-}
-
-.footer {
-  position: relative;
-  height: 10vh;
-  @include center_flex_row;
-  margin-top: 4rem;
-  border-top: solid 1px $color-dark-gray;
-  font-size: 1.8rem;
-  &-logo {
-    position: absolute;
-    left: 1rem;
-  }
-
-  &-contact {
-  }
-}
-
-.pointerEvents-none {
-  pointer-events: none;
-
-  & > * {
-    pointer-events: none;
-  }
-}
-#scrollAdhoc {
-  padding: 4rem 0;
-}
-
-.prologue-mobile {
-  @include respond(break-1000) {
-    display: flex;
-    flex-direction: column;
-    & > h1:not(:first-child) {
-    }
-  }
-}
-.prologue-mobile2 {
-  display: flex;
-  flex-direction: column;
-  @include respond(break-1000) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    & button {
-      margin-top: 1rem;
-    }
-  }
-}
-
-.text-align-center {
-  text-align: center;
-}
-
-.title-landing {
-  & > h1 {
-    width: 30%;
-    @include respond(break-1000) {
-      width: max-content;
-    }
-  }
-}
-
-//! AD HOC IMPORTANT SELECTOR
-.title-chapterTitle--c1 {
-  width: 100% !important;
 }
