--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,8 +16,8 @@
 @import 'subNav';
 
 // PAGES
-@import 'creativeNonfiction';
 @import 'chapterTemplate';
+@import 'chapterImgs';
 @import 'toc';
 
 //JS Transitions
