--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -11,7 +11,8 @@
   <div class="chapter-content">
     <div id="scrollAdhoc"></div>
     <div class="title title-content">
-      <h2 class="title-chapterTitle text-align-center">A Meeting</h2>
+      <h2 class="title-chapterTitle">A Meeting</h2>
+      <!--! remove text-align-center -->
       <span class="title-authorName">By Maxa Millennial</span>
     </div>
     <div class="chapter-text">
