--- a/templates/partials/subNav_aphorisms.html
+++ b/templates/partials/subNav_aphorisms.html
@@ -1,6 +1,6 @@
 <!------------ APHORISMS ------------>
 <div class="subNav" id="list-aphorisms">
-  <h2 class="subNav-header">Aphorisms</h2>
+  <h2 class="subNav-header">Aphorisms - coming soon</h2>
   <a href="#" class="subNav-link">
     <p class="subNav-link--text">1. A Drop In the Ocean</p>
   </a>
