--- a/templates/partials/subNav_articles.html
+++ b/templates/partials/subNav_articles.html
@@ -1,6 +1,6 @@
 <!------------ PANAGRAM ARTICLES ------------>
 <div class="subNav" id="list-articles">
-  <h2 class="subNav-header">Panagram Articles</h2>
+  <h2 class="subNav-header">Panagram Articles - coming soon</h2>
   <a href="#" class="subNav-link">
     <p class="subNav-link--text">1. How Does a Panagram Start?</p>
   </a>
