--- a/templates/partials/subNav_nonfiction-LF.html
+++ b/templates/partials/subNav_nonfiction-LF.html
@@ -1,6 +1,6 @@
 <!------------ LONGFORM NONFICTION ------------>
 <div class="subNav" id="list-nonfiction-long">
-  <h2 class="subNav-header">Longform Non-fiction</h2>
+  <h2 class="subNav-header">Longform Non-fiction - coming soon</h2>
   <a href="#" class="subNav-link">
     <p class="subNav-link--text">1. An Essay Concerning You</p>
   </a>
