--- a/templates/partials/subNav_nonfiction-SF.html
+++ b/templates/partials/subNav_nonfiction-SF.html
@@ -1,6 +1,6 @@
 <!------------ SHORTFORM NONFICTION ------------>
 <div class="subNav" id="list-nonfiction-short">
-  <h2 class="subNav-header">Shortform Non-fiction</h2>
+  <h2 class="subNav-header">Shortform Non-fiction - coming soon</h2>
   <a href="#" class="subNav-link">
     <p class="subNav-link--text">1. The Reasons I Can't Find</p>
   </a>
