--- a/scss/_topNav.scss
+++ b/scss/_topNav.scss
@@ -2,12 +2,6 @@
  *                          TOPNAV 
  *========================================================================**/
 
-#theGreenerSide {
-  position: relative;
-}
-
-//! ---- ALL NAV & DROPDOWN CONTAINERS ---- //
-//Main Container
 .topNav {
   position: sticky;
   z-index: 1000;
@@ -18,200 +12,34 @@
   color: $color-white;
   display: flex;
   justify-content: space-between;
-
-  &-ddMenu--logo {
-    font-weight: 300;
-    font-size: 3rem;
-    margin: 4rem auto 0;
-    text-align: center;
-  }
-  //!Left Wrapper Container
-  &-wrapperLeft {
+  &-left {
     display: flex;
     align-items: center;
   }
-
-  //Hamburger Menu Container
-  &-hamMenu--container {
-    @include center_flex_column;
-    cursor: pointer;
-    margin-left: 2rem;
-  }
-
-  //!Right Wrapper Container
-  &-wrapperRight {
+  &-right {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  //Dropdown Menu Container
-  &-ddMenu--container {
-    z-index: 100;
-    position: absolute;
-    top: 10vh;
-    left: 0;
-    width: 30rem;
-    height: 90vh;
-    border-top: 2px solid $color-gray;
-    border-right: 2px solid $color-black;
-    border-left: 2px solid $color-black;
-    background-color: $color-black;
-    transform: translateX(-100%);
-    transition: all 0.3s;
-    @include respond(break-850) {
-      width: 100%;
-    }
-  }
 
-  //Dropdown All-Links Container
-  &-ddMenu--allLinksContainer {
-    margin: 5rem 0;
-
-    & > div:not(:first-child) {
-      margin-top: 2rem;
-    }
-    @include respond(break-850) {
-      > div:not(:nth-of-type(2)) {
-        display: none;
+  &-hamMenu {
+    @include center_flex_column;
+    cursor: pointer;
+    margin-left: 2rem;
+    &--line {
+      height: 2px;
+      width: 3.5rem;
+      background-color: $color-white;
+      opacity: 1;
+      transform: rotate(0) translateY(0);
+      transition: all 0.3s;
+      &:nth-child(2) {
+        margin: 1rem 0;
       }
     }
   }
 
-  &-ddMenu--header {
-    width: 100%;
-    text-decoration: underline;
-    text-align: center;
-    margin-top: 2rem;
-    font-size: 2rem;
-    font-weight: 300;
-  }
-
-  &-ddMenu--btncontainer {
-  }
-  &-ddMenu--btnContact {
-    background-color: $color-nav-gray;
-    color: $color-white;
-    font-size: 2rem;
-    font-weight: 300;
-    width: 100%;
-    border: none;
-    padding: 1rem;
-    transition: background-color 0.3s;
-    cursor: pointer;
-
-    &:hover {
-      background-color: $color-red;
-    }
-  }
-  //Dropdown Individual Link Container
-  &-ddMenu--linkContainer {
-    position: relative;
-    height: 4.5rem;
-    width: 100%;
-    background-color: $color-nav-gray;
-    transform: translateY(0);
-    transition: all 0.3s;
-    transition-delay: transform 0.3s;
-    cursor: pointer;
-    @include center_flex_column;
-
-    &:hover {
-      background-color: $color-green;
-    }
-  }
-
-  //Dropdown Arrow Container
-  &-ddMenu--ddArrowContainer {
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 2rem;
-    width: 2rem;
-    margin: 3px;
-    @include center_flex_column;
-  }
-
-  //List Container
-  &-ddMenu--listContainer {
-    position: absolute;
-    width: 90%;
-    opacity: 0;
-    transition: opacity 0.3s;
-    transition-delay: 0.3s;
-
-    & > div:not(:first-child) {
-      margin-top: 1rem;
-    }
-    & > a:not(:first-child) {
-      margin-top: 1rem;
-    }
-  }
-
-  //Mini List Container
-  &-ddMenu--miniListContainer {
-    position: absolute;
-    padding: 1rem;
-    top: 50%;
-    right: -20%;
-    background-color: $color-nav-gray-dark;
-    transform: translateY(-50%);
-    opacity: 1;
-    transition: opacity 0.3s;
-    transition-delay: 0.3s;
-
-    & > div:not(:first-child) {
-      margin-top: 1rem;
-    }
-  }
-
-  //Category Links Container
-  &-ddMenu--listLinkContainer {
-    padding: 0 0.5rem;
-    height: min-content;
-    background-color: $color-nav-gray-light;
-    display: flex;
-    align-items: center;
-    border-radius: 2px;
-    transition: background-color 0.3s;
-    cursor: pointer;
-
-    &:hover {
-      z-index: 2;
-      background-color: $color-red;
-    }
-  }
-  //Dropdown Logout Container
-  &-ddMenu--logoutContainer {
-    transform: translateY(0);
-    transition: transform 0.3s;
-    transition-delay: 0.3s;
-    width: 100%;
-    @include center_flex_column;
-  }
-}
-
-#ddArrow-theGreenerSide {
-  position: relative;
-  left: 2.5rem;
-  transform: rotateZ(-90deg);
-}
-//! ---- TOP NAV STYLES ---- //
-
-.topNav {
-  //Hamburger Menu
-  &-hamMenu--line {
-    height: 2px;
-    width: 3.5rem;
-    background-color: $color-white;
-    opacity: 1;
-    transform: rotate(0) translateY(0);
-    transition: all 0.3s;
-    &:nth-child(2) {
-      margin: 1rem 0;
-    }
-  }
-
-  &-title--text {
+  &-title {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -230,127 +58,5 @@
     @include respond(break-1000) {
       font-size: 1.5rem;
     }
-  }
-}
-
-//! ---- Dropdown Styles ---- //
-.topNav-ddMenu {
-  &--link {
-    font-size: 2rem;
-    color: $color-white;
-  }
-  &--logoutBtn {
-    font-size: 2rem;
-    padding: 1rem 4rem;
-    border-radius: 5px;
-    background-color: $color-red;
-  }
-  &--ddArrow {
-    font-size: 1.5rem;
-    color: $color-white;
-    cursor: pointer;
-    transition: transform 0.3s;
-    transform: rotateZ(-90deg);
-
-    &--shortStories {
-      font-size: 1.5rem;
-      color: $color-white;
-      cursor: pointer;
-      transition: transform 0.3s;
-      transform: rotateY(180deg);
-    }
-  }
-  &--categoryLink {
-    color: $color-white;
-    font-size: 1.6rem;
-    margin-left: 1rem;
-    padding: 0.5rem 0;
-  }
-}
-
-.miniLink {
-  color: $color-white;
-  font-size: 1.6rem;
-  margin-left: 0rem;
-  padding: 0.5rem 0;
-}
-.show {
-  transform: translateX(0);
-}
-.hidden {
-  display: none;
-}
-
-.z-index-10 {
-  z-index: 10;
-}
-
-.position-absolute {
-  position: absolute;
-}
-
-.translateY-100 {
-  transform: translateY(180%);
-}
-.translateY-550 {
-  transform: translateY(550%);
-}
-.translateY-800 {
-  transform: translateY(800%);
-}
-.translateY-1600 {
-  transform: translateY(1600%);
-}
-
-.opacity-1 {
-  opacity: 1;
-}
-
-.hamHide {
-  opacity: 0;
-}
-
-.hamSlide1 {
-  transform: rotate(45deg) translateY(16px);
-}
-.hamSlide2 {
-  transform: rotate(-45deg) translateY(-17px);
-}
-
-.rotateX-180 {
-  transform: rotateX(180deg);
-}
-
-.height-125vh {
-  height: 125vh;
-}
-
-.creativeNonfiction-content {
-  height: 100vh;
-}
-
-.list-settings {
-  background-color: $color-nav-gray-dark;
-  transform: translateX(80%);
-  top: 0%;
-  padding: 2rem;
-  width: 40rem;
-}
-.list-shortStories {
-  left: 50%;
-  transform: translateX(-50%);
-}
-.list-header {
-  text-transform: none;
-  font-size: 1.8rem;
-  text-decoration: underline;
-  font-weight: 300;
-  text-align: center;
-}
-#list-chapters {
-  @include respond(break-850) {
-    opacity: 1;
-    width: 100%;
-    transform: translate(0, 0);
   }
 }
