--- a/templates/partials/topNav.html
+++ b/templates/partials/topNav.html
@@ -10,6 +10,6 @@
     <a class="topNav-title">Maxa Millennial Collections</a>
   </div>
   <div class="topNav-right">
-    <div class="topNav-link">Panagram</div>
+    <a href="http://panagram2.getforge.io/" class="topNav-link">Panagram</a>
   </div>
 </section>
