Added in basic HTML for toc page

--- a/css/style.css
+++ b/css/style.css
@@ -1561,7 +1561,41 @@ a {
       left: 0rem; } }
 
 .title-chapterTitle--prologue {
-  text-align: center; }
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1200) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1400
+   @include respond(break-greater-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+  @media (max-width: 62.5em) {
+    .title-chapterTitle--prologue {
+      text-align: center; } }
 
 .title-chapterTitle--c1 {
   /**============================================
@@ -1874,6 +1908,18 @@ a {
 /**========================================================================
  *                           TABLE OF CONTENTS 
  *========================================================================**/
+.toc {
+  height: 90vh;
+  display: flex;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/toc-crop.jpg");
+  background-size: cover; }
+  .toc-mainLinks {
+    display: flex;
+    flex-direction: column; }
+  .toc-pieceLinks {
+    display: flex;
+    flex-direction: column; }
+
 /**========================================================================
  *                          JAVASCRIPT 
  *========================================================================**/
