--- a/templates/macros/title-macro.html
+++ b/templates/macros/title-macro.html
@@ -14,4 +14,6 @@
 <title>My Brothers and Sisters</title>
 {% endif %} {%if title == 'A Journal Entry from the Last Man on Earth' %}
 <title>A Journal Entry from the Last Man on Earth</title>
+{% endif %} {%if title == 'Table of Contents' %}
+<title>Table of Contents</title>
 {% endif %} {% endmacro %}
