--- a/scss/_toc.scss
+++ b/scss/_toc.scss
@@ -2,55 +2,23 @@
  *                           TABLE OF CONTENTS 
  *========================================================================**/
 
-// h1 {
-//   font-size: 5rem;
-//   @include respond(break-1000) {
-//     font-size: 3rem;
-//   }
-// }
+.toc {
+  height: 90vh;
+  display: flex;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url('../img/toc-crop.jpg');
+  background-size: cover;
 
-// h2 {
-//   font-size: 7rem;
-//   font-weight: 300;
-//   text-transform: uppercase;
-//   @include respond(break-greater-1600) {
-//     font-size: 10rem;
-//   }
-//   @include respond(break-1000) {
-//     font-size: 3.5rem;
-//   }
-// }
-
-// .pageContainer {
-//   position: relative;
-// }
-// .chapter {
-//   &-landing {
-//     position: relative;
-//     z-index: 1;
-//     height: 100vh;
-//     width: 100%;
-//     &--prologue {
-//       background-image: linear-gradient(
-//           to right,
-//           rgba(0, 0, 0, 0.55),
-//           rgba(0, 0, 0, 0.55)
-//         ),
-//         url('../img/toc.jpg');
-//       background-size: cover;
-//       background-repeat: no-repeat;
-//       background-position: center;
-//       @include respond(break-1000) {
-//         background-size: contain;
-//         background-position: 60% 45%;
-//         background-image: linear-gradient(
-//             to top,
-//             rgba(0, 0, 0, 1) 30%,
-//             rgba(0, 0, 0, 0) 40% 65%,
-//             rgba(0, 0, 0, 1) 75%
-//           ),
-//           url('../img/toc.jpg');
-//       }
-//     }
-//   }
-// }
+  &-mainLinks {
+    display: flex;
+    flex-direction: column;
+  }
+  &-pieceLinks {
+    display: flex;
+    flex-direction: column;
+  }
+}
