--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,5 +37,6 @@
     <!------- JAVASCRIPT ------->
     <script src="topNav.js"></script>
     <script src="smoothScroll.js"></script>
+    <script src="toc.js"></script>
   </body>
 </html>
