Major toc commit. First draft of animations for chapters and fiction

--- a/templates/partials/subNav_chapters.html
+++ b/templates/partials/subNav_chapters.html
@@ -4,7 +4,7 @@
 <!------------ ------------------------ ------------>
 <div class="subNav" id="list-chapters">
   <h2 class="subNav-header">Maxa Milennial Chapters</h2>
-  <a href="index.html" class="subNav-link">
+  <a href="chapterPrologue.html" class="subNav-link">
     <p class="subNav-link--text">Prologue</p>
   </a>
   <a href="chapter1.html" class="subNav-link">
