--- a/templates/partials/topNav.html
+++ b/templates/partials/topNav.html
@@ -7,7 +7,7 @@
       <div class="topNav-hamMenu--line" id="hamLine2"></div>
       <div class="topNav-hamMenu--line" id="hamLine3"></div>
     </div>
-    <a href="toc.html" class="topNav-title">Maxa Millennial Collections</a>
+    <a href="index.html" class="topNav-title">Maxa Millennial Collections</a>
   </div>
   <div class="topNav-right">
     <a href="http://panagram2.getforge.io/" class="topNav-link">Panagram</a>
