--- a/css/style.css
+++ b/css/style.css
@@ -1910,15 +1910,202 @@ a {
  *========================================================================**/
 .toc {
   height: 90vh;
+  width: 100%;
   display: flex;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/toc-crop.jpg");
   background-size: cover; }
   .toc-mainLinks {
-    display: flex;
-    flex-direction: column; }
+    width: 30%;
+    display: grid;
+    place-items: center; }
+    .toc-mainLinks--container {
+      display: flex;
+      flex-direction: column; }
   .toc-pieceLinks {
-    display: flex;
-    flex-direction: column; }
+    position: relative;
+    width: 70%;
+    display: grid;
+    place-items: center; }
+    .toc-pieceLinks--chapters {
+      display: flex;
+      flex-direction: column;
+      opacity: 0;
+      transition: opacity 1s; }
+    .toc-pieceLinks--fiction {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      opacity: 1;
+      transition: opacity 1s; }
+
+.mainLink {
+  color: #333333;
+  background-color: rgba(233, 233, 233, 0.75);
+  font-size: 2rem;
+  padding: 1.5rem 1rem;
+  margin: 1rem;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.5s; }
+  .mainLink:hover {
+    background-color: rgba(86, 210, 112, 0.85); }
+
+.pieceLink {
+  position: relative;
+  font-size: 2rem;
+  opacity: 0;
+  color: #333333;
+  background-color: rgba(233, 233, 233, 0.75);
+  transition: background-color 0.3s; }
+  .pieceLink:hover {
+    background-color: rgba(253, 114, 114, 0.9); }
+  .pieceLink-chapter {
+    padding: 1.5rem 1rem;
+    border-radius: 5px;
+    text-align: center;
+    transition: opacity 0.5s; }
+  .pieceLink-fiction {
+    position: absolute;
+    padding: 3rem 1rem;
+    width: 15rem;
+    border-radius: 5px;
+    text-align: center; }
+  .pieceLink-afterLine {
+    opacity: 0;
+    height: 5rem;
+    width: 4px;
+    position: relative;
+    background-color: white;
+    align-self: center;
+    transition: opacity 1s; }
+    .pieceLink-afterLine--movingBlock {
+      position: absolute;
+      border-radius: 2px;
+      top: 0;
+      width: 4px;
+      height: 4px;
+      background-color: #fc3b3b;
+      animation: chapterLine 2s infinite linear; }
+
+.fade-f1 {
+  top: 25%;
+  left: 25%;
+  animation: f1 1s 1 forwards; }
+
+.fade-f2 {
+  top: 25%;
+  left: 75%;
+  animation: f2 1s 1 forwards; }
+
+.fade-f3 {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: fadeIn 1s 1 forwards; }
+
+.fade-f4 {
+  top: 75%;
+  left: 25%;
+  animation: f4 1s 1 forwards; }
+
+.fade-f5 {
+  top: 75%;
+  left: 75%;
+  animation: f5 1s 1 forwards; }
+
+@keyframes chapterLine {
+  from {
+    top: 0%; }
+  to {
+    top: 100%; } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes f1 {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -50%); }
+  to {
+    opacity: 1;
+    transform: translate(-25%, -25%); } }
+
+@keyframes f2 {
+  from {
+    transform: translate(-50%, -50%);
+    opacity: 0; }
+  to {
+    transform: translate(-75%, -25%);
+    opacity: 1; } }
+
+@keyframes f4 {
+  from {
+    transform: translate(-50%, 50%);
+    opacity: 0; }
+  to {
+    transform: translate(-25%, -75%);
+    opacity: 1; } }
+
+@keyframes f5 {
+  from {
+    transform: translate(-50%, 50%);
+    opacity: 0; }
+  to {
+    transform: translate(-75%, -75%);
+    opacity: 1; } }
+
+@keyframes unfold {
+  from {
+    opacity: 0;
+    transform: rotateX(0); }
+  to {
+    opacity: 1;
+    transform: rotateX(360deg); } }
+
+.unfold-0 {
+  animation: unfold 1s 0s 1 forwards; }
+
+.unfold-1 {
+  animation: unfold 1s 0.3s 1 forwards; }
+
+.unfold-2 {
+  animation: unfold 1s 0.6s 1 forwards; }
+
+.unfold-3 {
+  animation: unfold 1s 0.9s 1 forwards; }
+
+.unfold-4 {
+  animation: unfold 1s 1.2s 1 forwards; }
+
+.unfold-5 {
+  animation: unfold 1s 1.5s 1 forwards; }
+
+.unfold-6 {
+  animation: unfold 1s 1.8s 1 forwards; }
+
+.fade-0 {
+  animation: fadeIn 1s 0.9s 1 forwards; }
+
+.fade-1 {
+  animation: fadeIn 1s 1.2s 1 forwards; }
+
+.fade-2 {
+  animation: fadeIn 1s 1.5s 1 forwards; }
+
+.fade-3 {
+  animation: fadeIn 1s 1.8s 1 forwards; }
+
+.fade-4 {
+  animation: fadeIn 1s 2.1s 1 forwards; }
+
+.fade-5 {
+  animation: fadeIn 1s 2.4s 1 forwards; }
 
 /**========================================================================
  *                          JAVASCRIPT 
@@ -1928,6 +2115,9 @@ a {
 
 .rotateZ-90 {
   transform: rotateZ(90deg); }
+
+.opacity-0 {
+  opacity: 0; }
 
 .opacity-1 {
   opacity: 1; }
