--- a/scss/_toc.scss
+++ b/scss/_toc.scss
@@ -4,6 +4,7 @@
 
 .toc {
   height: 90vh;
+  width: 100%;
   display: flex;
   background-image: linear-gradient(
       to bottom,
@@ -14,11 +15,231 @@
   background-size: cover;
 
   &-mainLinks {
-    display: flex;
-    flex-direction: column;
+    width: 30%;
+    display: grid;
+    place-items: center;
+
+    &--container {
+      display: flex;
+      flex-direction: column;
+    }
   }
   &-pieceLinks {
-    display: flex;
-    flex-direction: column;
+    position: relative;
+    width: 70%;
+    display: grid;
+    place-items: center;
+
+    &--chapters {
+      display: flex;
+      flex-direction: column;
+      opacity: 0;
+      transition: opacity 1s;
+    }
+    &--fiction {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      opacity: 1;
+      transition: opacity 1s;
+    }
   }
+}
+.mainLink {
+  color: $color-black;
+  background-color: $color-white-opaque;
+  font-size: 2rem;
+  padding: 1.5rem 1rem;
+  margin: 1rem;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.5s;
+  &:hover {
+    background-color: $color-green-opaque;
+  }
+}
+.pieceLink {
+  position: relative;
+  font-size: 2rem;
+  opacity: 0;
+  color: $color-black;
+  background-color: $color-white-opaque;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: $color-red-opaque;
+  }
+
+  &-chapter {
+    padding: 1.5rem 1rem;
+    border-radius: 5px;
+    text-align: center;
+    transition: opacity 0.5s;
+  }
+
+  &-fiction {
+    position: absolute;
+    padding: 3rem 1rem;
+    width: 15rem;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  &-afterLine {
+    opacity: 0;
+    height: 5rem;
+    width: 4px;
+    position: relative;
+    background-color: $color-white;
+    align-self: center;
+    transition: opacity 1s;
+    &--movingBlock {
+      position: absolute;
+      border-radius: 2px;
+      top: 0;
+      width: 4px;
+      height: 4px;
+      background-color: $color-red;
+      animation: chapterLine 2s infinite linear;
+    }
+  }
+}
+
+.fade-f1 {
+  top: 25%;
+  left: 25%;
+  animation: f1 1s 1 forwards;
+}
+.fade-f2 {
+  top: 25%;
+  left: 75%;
+  animation: f2 1s 1 forwards;
+}
+.fade-f3 {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: fadeIn 1s 1 forwards;
+}
+.fade-f4 {
+  top: 75%;
+  left: 25%;
+  animation: f4 1s 1 forwards;
+}
+.fade-f5 {
+  top: 75%;
+  left: 75%;
+  animation: f5 1s 1 forwards;
+}
+
+//ANIMATIONS
+@keyframes chapterLine {
+  from {
+    top: 0%;
+  }
+  to {
+    top: 100%;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes f1 {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -50%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-25%, -25%);
+  }
+}
+@keyframes f2 {
+  from {
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  to {
+    transform: translate(-75%, -25%);
+    opacity: 1;
+  }
+}
+@keyframes f4 {
+  from {
+    transform: translate(-50%, 50%);
+    opacity: 0;
+  }
+  to {
+    transform: translate(-25%, -75%);
+    opacity: 1;
+  }
+}
+@keyframes f5 {
+  from {
+    transform: translate(-50%, 50%);
+    opacity: 0;
+  }
+  to {
+    transform: translate(-75%, -75%);
+    opacity: 1;
+  }
+}
+@keyframes unfold {
+  from {
+    opacity: 0;
+    transform: rotateX(0);
+  }
+  to {
+    opacity: 1;
+    transform: rotateX(360deg);
+  }
+}
+.unfold-0 {
+  animation: unfold 1s 0s 1 forwards;
+}
+.unfold-1 {
+  animation: unfold 1s 0.3s 1 forwards;
+}
+.unfold-2 {
+  animation: unfold 1s 0.6s 1 forwards;
+}
+.unfold-3 {
+  animation: unfold 1s 0.9s 1 forwards;
+}
+.unfold-4 {
+  animation: unfold 1s 1.2s 1 forwards;
+}
+.unfold-5 {
+  animation: unfold 1s 1.5s 1 forwards;
+}
+.unfold-6 {
+  animation: unfold 1s 1.8s 1 forwards;
+}
+
+.fade-0 {
+  animation: fadeIn 1s 0.9s 1 forwards;
+}
+.fade-1 {
+  animation: fadeIn 1s 1.2s 1 forwards;
+}
+.fade-2 {
+  animation: fadeIn 1s 1.5s 1 forwards;
+}
+.fade-3 {
+  animation: fadeIn 1s 1.8s 1 forwards;
+}
+.fade-4 {
+  animation: fadeIn 1s 2.1s 1 forwards;
+}
+.fade-5 {
+  animation: fadeIn 1s 2.4s 1 forwards;
 }
