--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -43,10 +43,12 @@ $color-nav-gray-dark: rgb(70, 70, 70);
    *     Opaques 
    *========================**/
 
+$color-white-opaque: rgba(233, 233, 233, 0.75);
+$color-green-opaque: rgba(86, 210, 112, 0.85);
 $color-chocolate-opaque: rgba(67, 62, 60, 0.5);
 $color-orange-opaque: rgba(255, 145, 0, 0.5);
 $color-teal-opaque: rgba(47, 193, 250, 0.2);
-
+$color-red-opaque: rgba(253, 114, 114, 0.9);
 /**======================
    *      Links
    *========================**/
