--- a/templates/partials/toc.html
+++ b/templates/partials/toc.html
@@ -1,22 +1,22 @@
 <section class="toc">
   <div class="toc-mainLinks">
     <div class="toc-mainLinks--container">
-      <div class="mainLink" id="toc-chapters">
+      <div class="mainLink" id="toc-chaptersLink">
         <p class="mainLink-text">Maxa Millennial Chapters</p>
       </div>
-      <div class="mainLink" id="toc-fiction">
+      <div class="mainLink" id="toc-fictionLink">
         <p class="mainLink-text">Fiction</p>
       </div>
-      <div class="mainLink" id="toc-LF">
+      <div class="mainLink" id="toc-LF-NonfictionLink">
         <p class="mainLink-text">Longform Non-fiction</p>
       </div>
-      <div class="mainLink" id="toc-SF">
+      <div class="mainLink" id="toc-SF-NonfictionLink">
         <p class="mainLink-text">Shortform Non-fiction</p>
       </div>
-      <div class="mainLink" id="toc-aphorisms">
+      <div class="mainLink" id="toc-aphorismsLink">
         <p class="mainLink-text">Aphorisms</p>
       </div>
-      <div class="mainLink" id="toc-poetry">
+      <div class="mainLink" id="toc-poetryLink">
         <p class="mainLink-text">Poetry</p>
       </div>
     </div>
@@ -24,71 +24,8 @@
 
   <!--! FICTION -->
   <div class="toc-pieceLinks">
-    <div class="toc-pieceLinks--fiction" id="toc-fictionDisplay">
-      <a href="#" class="pieceLink pieceLink-fiction" id="f1">
-        Mirror In the Mirror
-      </a>
-      <a href="#" class="pieceLink pieceLink-fiction" id="f2">
-        A Chair to Nowhere
-      </a>
-      <a href="#" class="pieceLink pieceLink-fiction" id="f3">
-        A Bishop's Watchdog
-      </a>
-      <a href="#" class="pieceLink pieceLink-fiction" id="f4">
-        The Doctor's Apprentice
-      </a>
-      <a href="#" class="pieceLink pieceLink-fiction" id="f5">
-        Politicians of the Future
-      </a>
-    </div>
+    {% include "partials/toc_fiction.html" %}
     <!--! CHAPTERS -->
-    <div class="toc-pieceLinks">
-      <div class="toc-pieceLinks--chapters" id="toc-chaptersDisplay">
-        <a
-          href="chapterPrologue.html"
-          class="pieceLink pieceLink-chapter"
-          id="c0"
-        >
-          Prologue: A Meeting
-        </a>
-        <div class="pieceLink-afterLine" id="c0-line">
-          <div class="pieceLink-afterLine--movingBlock"></div>
-        </div>
-        <a href="chapter1.html" class="pieceLink pieceLink-chapter" id="c1">
-          Chapter 1: A Terminal Diagnosis
-        </a>
-        <div class="pieceLink-afterLine" id="c1-line">
-          <div class="pieceLink-afterLine--movingBlock"></div>
-        </div>
-        <a href="c2.html" class="pieceLink pieceLink-chapter" id="c2">
-          Chapter 2: Surviving the First Death
-        </a>
-        <div class="pieceLink-afterLine" id="c2-line">
-          <div class="pieceLink-afterLine--movingBlock"></div>
-        </div>
-        <a href="c3.html" class="pieceLink pieceLink-chapter" id="c3">
-          Chapter 3: Ego Death
-        </a>
-        <div class="pieceLink-afterLine" id="c3-line">
-          <div class="pieceLink-afterLine--movingBlock"></div>
-        </div>
-        <a href="c4.html" class="pieceLink pieceLink-chapter" id="c4">
-          Chapter 4: The Fight to Undermine
-        </a>
-        <div class="pieceLink-afterLine" id="c4-line">
-          <div class="pieceLink-afterLine--movingBlock"></div>
-        </div>
-        <a href="c5.html" class="pieceLink pieceLink-chapter" id="c5">
-          Chapter 5: My Brothers and Sisters
-        </a>
-        <div class="pieceLink-afterLine" id="c5-line">
-          <div class="pieceLink-afterLine--movingBlock"></div>
-        </div>
-
-        <a href="c6.html" class="pieceLink pieceLink-chapter" id="c6">
-          Chapter 6: A Journal Entry from the Last Man on Earth
-        </a>
-      </div>
-    </div>
+    {% include "partials/toc_chapters.html" %}
   </div>
 </section>
