--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,7 +19,8 @@
 // PAGES
 @import 'chapterTemplate';
 @import 'chapterImgs';
-@import 'toc';
+@import 'toc-links';
+@import 'toc-containers';
 
 //JS Transitions
 @import 'javascript';
