--- a/scss/_toc-animations.scss
+++ b/scss/_toc-animations.scss
@@ -138,3 +138,12 @@
     opacity: 1;
   }
 }
+
+//NONFICTION LF
+
+.fadeIn-LF1 {
+  animation: fadeIn 1s 1 forwards;
+}
+.fadeIn-LF2 {
+  animation: fadeIn 1s 1s 1 forwards;
+}
