--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,6 +23,7 @@ $color-light-chocolate: rgb(84, 76, 73);
 $color-black: rgb(51, 51, 51);
 $color-orange: rgb(255, 145, 0);
 $color-red: rgb(252, 59, 59);
+$color-deep-red: rgb(242, 0, 0);
 $color-dark-cream: rgb(199, 190, 186);
 $color-light-purple: rgb(216, 174, 253);
 $color-purple: rgb(233, 115, 251);
@@ -47,7 +48,7 @@ $color-white-opaque: rgba(233, 233, 233, 0.75);
 $color-green-opaque: rgba(86, 210, 112, 0.85);
 $color-chocolate-opaque: rgba(67, 62, 60, 0.5);
 $color-orange-opaque: rgba(255, 145, 0, 0.5);
-$color-teal-opaque: rgba(47, 193, 250, 0.2);
+$color-teal-opaque: rgba(47, 193, 250, 0.4);
 $color-red-opaque: rgba(253, 114, 114, 0.9);
 /**======================
    *      Links
