--- a/templates/partials/toc.html
+++ b/templates/partials/toc.html
@@ -22,10 +22,18 @@
     </div>
   </div>
 
-  <!--! FICTION -->
   <div class="toc-pieceLinks">
+    <!--! FICTION -->
     {% include "partials/toc_fiction.html" %}
     <!--! CHAPTERS -->
     {% include "partials/toc_chapters.html" %}
+    <!--! Nonfiction LF -->
+    {% include "partials/toc_nonfiction-LF.html" %}
+    <!--! Nonfiction SF -->
+    {% include "partials/toc_nonfiction-SF.html" %}
+    <!--! Aphorisms  -->
+    {% include "partials/toc_aphorisms.html" %}
+    <!--! Poetry -->
+    {% include "partials/toc_poetry.html" %}
   </div>
 </section>
